# dnsext

./: build.sh  cabal.project  test.sh
.github/workflows/: bowline.yml  main.yml
build-docker/: Dockerfile  Dockerfile.ghcup  Dockerfile.haskell  build.sh
dnsext-auth/: LICENSE  dnsext-auth.cabal
dnsext-auth/DNS/Auth/: Algorithm.hs  DB.hs
dnsext-auth/test/: AlgorithmSecSpec.hs  AlgorithmSpec.hs  RFC4035Spec.hs  RFC4592Spec.hs  example.zone  rfc4035.zone  rfc4592.zone
dnsext-bowline/: cap_test.hs  commit-iquery.hs  configure  configure.ac  dnsext-bowline.cabal  test-dug.hs
dnsext-bowline/bowline/: Config.hs  DNSTAP.hs  LinuxCap.hsc  Monitor.hs  Parser.hs  SockOpt.hsc  SocketUtil.hs  WebAPI.hs  bowline.conf  bowline.hs  local-example.conf  svcb-example.conf
dnsext-bowline/clove/: Auth.hs  Axfr.hs  Config.hs  Control.hs  Net.hs  Notify.hs  Types.hs  Zone.hs  clove.conf  clove.hs
dnsext-bowline/ddrd/: ddrd.hs
dnsext-bowline/dug/: Iterative.hs  Output.hs  Recursive.hs  dug.hs
dnsext-bowline/include/: HsLinuxCap.h
dnsext-bowline/seteuid/: seteuid.hs
dnsext-dnssec/: dnsext-dnssec.cabal  example.hs  exampleECDSAP256.hs  exampleECDSAP384.hs  exampleEd25519.hs  exampleEd448.hs  exampleRSASHA256.hs  exampleRSASHA512.hs  nsec3Example.hs  verifyCases.hs
dnsext-dnssec/DNS/: SEC.hs
dnsext-dnssec/DNS/SEC/: Internal.hs  PubKey.hs  Types.hs  Verify.hs
dnsext-dnssec/DNS/SEC/Verify/: ECDSA.hs  EdDSA.hs  N3SHA.hs  NSEC.hs  NSEC3.hs  NSECxRange.hs  RRSIG.hs  RRset.hs  RSA.hs  SHA.hs  Sign.hs  Supported.hs  Types.hs  Verify.hs
dnsext-dnssec/test/: RoundTripSpec.hs  VerifySpec.hs
dnsext-do53/DNS/Do53/: Client.hs  Do53.hs  IO.hs  Internal.hs  Lookup.hs  LookupX.hs  Query.hs  ReaperReduced.hs  Resolve.hs  System.hs  Types.hs  VC.hs
dnsext-dox/: dnsext-dox.cabal
dnsext-dox/DNS/DoX/: HTTP2.hs  Imports.hs  QUIC.hs  SAN.hs  TLS.hs
dnsext-full-resolver/DNS/Cache/: Iterative.hs  Server.hs  UpdateCache.hs
dnsext-full-resolver/DNS/Cache/Iterative/: Cache.hs  Delegation.hs  Helpers.hs  Resolve.hs  ResolveJust.hs  Root.hs  Types.hs  Verify.hs
dnsext-full-resolver/qtest/: QuerySpec.hs
dnsext-iterative/: dnsext-iterative.cabal
dnsext-iterative/DNS/Iterative/: Imports.hs  Internal.hs  Query.hs  Queue.hs  Server.hs  Stats.hs  Types.hs  WorkerStats.hs
dnsext-iterative/DNS/Iterative/Query/: API.hs  Cache.hs  Class.hs  DefaultLocal.hs  Delegation.hs  Env.hs  Helpers.hs  LocalZone.hs  Norec.hs  Random.hs  Resolve.hs  ResolveJust.hs  Resolver53.hs  Root.hs  SteppedWait.hs  TestEnv.hs  TrustAnchor.hs  Types.hs  Utils.hs  Verify.hs  WitnessInfo.hs
dnsext-iterative/DNS/Iterative/Server/: BackendTLS.hs  Bench.hs  CtlRecv.hs  HTTP2.hs  HTTP3.hs  NonBlocking.hs  Pipeline.hs  PrometheusHisto.hs  ProxyVC.hs  QUIC.hs  Queue.hs  TCP.hs  TLS.hs  TLSpx.hs  Types.hs  UDP.hs  WorkerStats.hs
dnsext-iterative/bench/: benchmark.hs
dnsext-iterative/test/: ConnectSpec.hs  CtlRecvSpec.hs  NonBlockingSpec.hs  QuerySpec.hs  SessionPropSpec.hs  SessionSpec.hs
dnsext-svcb/: dnsext-svcb.cabal
dnsext-svcb/DNS/: SVCB.hs
dnsext-svcb/DNS/SVCB/: Key.hs  Params.hs  SVCB.hs
dnsext-types/: dnsext-types.cabal
dnsext-types/DNS/: Exception.hs  Types.hs
dnsext-types/DNS/ByteCodec/: Base16.hs  Base32Hex.hs  Base64.hs  Type.hs
dnsext-types/DNS/StateBinary/: SGet.hs
dnsext-types/DNS/Types/: BaseEncoding.hs  Decode.hs  Domain.hs  EDNS.hs  Encode.hs  Error.hs  Internal.hs  Message.hs  RData.hs  Serial.hs  Time.hs  Type.hs
dnsext-types/DNS/Wire/: Builder.hs  Parser.hs
dnsext-types/test/: RoundTripSpec.hs
dnsext-utils/: dnsext-utils.cabal
dnsext-utils/DNS/: Array.hs  Config.hs  Log.hs  ThreadAsync.hs  ThreadStats.hs  TimeCache.hs  TimeStamp.hs  ZoneFile.hs
dnsext-utils/DNS/Parser/: Class.hs  State.hs
dnsext-utils/DNS/RRCache/: MemSize.hs  ReaperReduced.hs
dnsext-utils/DNS/TAP/: FastStream.hs  Schema.hs
dnsext-utils/DNS/ZoneFile/: IO.hs  Lexer.hs  Parser.hs  ParserBase.hs  ParserDNSSEC.hs  ParserSVCB.hs  SVCBParser.hs  Types.hs
dnsext-utils/DNS/ZoneFile/Parser/: Base.hs
docs/: bowline.md  ddrd.md  dug.md  index.md
example-dnsperf/: r-batch-and-quit.sh.example  r-batch.sh  r4.txt
pkg/: pkgctl.sh
pkg/template/debian/: bowline.lintian-overrides
