cabal-version:      >=1.10
name:               dnsext-auth
version:            0.0.0
license-file:       LICENSE
maintainer:         kazu@iij.ad.jp
author:             Kazu Yamamoto
build-type:         Simple
extra-source-files: CHANGELOG.md

library
    exposed-modules:
        DNS.Auth.DB
        DNS.Auth.Algorithm

    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:
        base >=4 && <5,
        containers,
        dnsext-types,
        dnsext-utils

    if impl(ghc >=8)
        default-extensions: Strict StrictData

test-suite spec
    type:               exitcode-stdio-1.0
    main-is:            Spec.hs
    build-tool-depends: hspec-discover:hspec-discover
    hs-source-dirs:     test
    other-modules:      AlgorithmSpec
    default-language:   Haskell2010
    ghc-options:        -Wall -threaded
    build-depends:
        base,
        bytestring,
        dnsext-auth,
        dnsext-types,
        hspec

    if (os(windows) && impl(ghc >=9.0))
        ghc-options: -with-rtsopts=--io-manager=native

    if impl(ghc >=8)
        default-extensions: Strict StrictData
