cabal-version:      3.0
name:               dnsext-dox
version:            0.0.0
license:            BSD-3-Clause
license-file:       LICENSE
maintainer:         Kazu Yamamoto <kazu@iij.ad.jp>
author:             Kazu Yamamoto <kazu@iij.ad.jp>
tested-with:        ghc ==8.6.5 ghc ==8.8.4 ghc ==9.0.2 ghc ==9.2.4
synopsis:           DNS over X based on dnsext
description:
    A thread-safe DNS library for both clients and servers written
    purely in Haskell.

category:           Network
build-type:         Simple
extra-source-files: CHANGELOG.md

source-repository head
    type:     git
    location: https://github.com/kazu-yamamoto/dnsext

library
    exposed-modules:
        DNS.DoX.Client
        DNS.DoX.Internal

    other-modules:
        DNS.DoX.HTTP2
        DNS.DoX.HTTP3
        DNS.DoX.Imports
        DNS.DoX.QUIC
        DNS.DoX.SAN
        DNS.DoX.TLS

    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:
        -- GHC bundled
        base >=4 && <5,
        bytestring,
        -- dnsext packages
        dnsext-do53,
        dnsext-svcb,
        dnsext-types,
        dnsext-utils,
        -- other packages
        crypton-x509 >=1.8 && <1.9,
        crypton-x509-validation >=1.8 && <1.9,
        http-types,
        http2 >= 5.4 && < 5.5,
        http2-tls >= 0.5 && < 0.6,
        http3 >= 0.1.2 && < 0.2,
        iproute,
        network >= 3.2.8 && < 3.3,
        quic >= 0.2.21 && < 0.3,
        serialise,
        tls >= 2.1.10

    if impl(ghc >=8)
        default-extensions: Strict StrictData

test-suite spec
    type:               exitcode-stdio-1.0
    main-is:            Spec.hs
    build-tool-depends: hspec-discover:hspec-discover
    hs-source-dirs:     test
    other-modules:      ResolverSpec
    default-language:   Haskell2010
    ghc-options:        -Wall -threaded
    build-depends:
        -- GHC bundled
        base,
        bytestring,
        -- this package
        dnsext-dox,
        -- dnsext packages
        dnsext-do53,
        dnsext-types,
        -- other packages
        hspec

    if (os(windows) && impl(ghc >=9.0))
        ghc-options: -with-rtsopts=--io-manager=native

    if impl(ghc >=8)
        default-extensions: Strict StrictData
