cabal-version:      >=1.10
name:               dnsext-utils
version:            0.0.0
license-file:       LICENSE
maintainer:         ex8k.hibino@gmail.com, kazu@iij.ad.jp
author:             Kei Hibino and Kazu Yamamoto
build-type:         Simple
extra-source-files: CHANGELOG.md

library
    exposed-modules:
        DNS.Array
        DNS.Config
        DNS.Log
        DNS.Parser
        DNS.RRCache
        DNS.TAP.FastStream
        DNS.TAP.ProtocolBuffer
        DNS.TAP.Schema
        DNS.ThreadAsync
        DNS.ThreadStats
        DNS.TimeCache
        DNS.ZoneFile

    other-modules:
        DNS.Config.Parser
        DNS.Parser.Class
        DNS.Parser.State
        DNS.RRCache.Managed
        DNS.RRCache.ReaperReduced
        DNS.RRCache.Types
        DNS.Utils.AutoUpdate
        DNS.ZoneFile.IO
        DNS.ZoneFile.Lexer
        DNS.ZoneFile.Parser
        DNS.ZoneFile.ParserBase
        DNS.ZoneFile.ParserDNSSEC
        DNS.ZoneFile.ParserSVCB
        DNS.ZoneFile.Types

    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:
        base >=4 && <5,
        ansi-terminal,
        array,
        async,
        bytestring,
        containers,
        deepseq,
        dnsext-dnssec,
        dnsext-svcb,
        dnsext-types,
        iproute,
        network >=3.2.2 && <3.3,
        network-byte-order,
        psqueues-ext,
        recv,
        split,
        stm,
        transformers,
        unix,
        unix-time,
        word8

    if impl(ghc >=8)
        default-extensions: Strict StrictData

test-suite spec
    type:               exitcode-stdio-1.0
    main-is:            Spec.hs
    build-tool-depends: hspec-discover:hspec-discover
    hs-source-dirs:     test
    other-modules:
        ArraySpec
        FastStreamSpec
        ProtocolBufferSpec
        SchemaSpec

    default-language:   Haskell2010
    ghc-options:        -Wall -threaded -with-rtsopts=-N
    build-depends:
        base,
        array,
        async,
        bytestring,
        dnsext-types,
        dnsext-utils,
        hspec,
        network-run

    if impl(ghc >=8)
        default-extensions: Strict StrictData

test-suite cache-test
    type:             exitcode-stdio-1.0
    main-is:          cache.hs
    hs-source-dirs:   test
    other-modules:    CacheProp
    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:
        base,
        QuickCheck,
        bytestring,
        dnsext-types,
        dnsext-utils,
        unix-time

    if impl(ghc >=8)
        default-extensions: Strict StrictData
